# mba-ia-desafio-ingestao-busca

./: .env.example  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: tests.yml
src/: chat.py  config.py  ingest.py  search.py
tests/: conftest.py  pytest.ini
tests/integration/: test_pipeline.py
tests/unit/: test_chat.py  test_ingest.py  test_search.py
